# stats

./: .gitignore  CONTRIBUTING.md  Cargo.toml  DOCUMENTATION.md  FEATURES.md  FEATURE_COMPARISON.md  LICENSE  PERFORMANCE.md  README.md  TREE_SHAKING.md  plan.md  vercel.json
.cargo/: config.toml
.github/workflows/: deploy-docs.yml  tests.yml
crates/stat-core/: Cargo.toml
crates/stat-core/benches/: stats_bench.rs
crates/stat-core/src/: distributions.rs  lib.rs  stats.rs
crates/stat-core/src/stats/: basic.rs  correlation.rs  histogram.rs  minmax.rs  mod.rs  moments.rs  order.rs  regression.rs  simd.rs  statistical_tests.rs  transform.rs
crates/stat-core/src/stats/tests/: basic.rs  basic.test.rs  correlation.rs  correlation.test.rs  histogram.rs  histogram.test.rs  minmax.test.rs  mod.rs  moments.rs  moments.test.rs  order.rs  order.test.rs  regression.rs  regression.test.rs  statistical_tests.rs  statistical_tests.test.rs  transform.rs  transform.test.rs
crates/stat-wasm/: Cargo.toml  wasm-bindgen-lite.config.json
crates/stat-wasm-correlation/: Cargo.toml  wasm-bindgen-lite.config.json
crates/stat-wasm-distributions/: Cargo.toml  wasm-bindgen-lite.config.json
crates/stat-wasm-quantiles/: Cargo.toml  wasm-bindgen-lite.config.json
crates/stat-wasm-stats/: Cargo.toml  wasm-bindgen-lite.config.json
crates/stat-wasm-tests/: Cargo.toml  wasm-bindgen-lite.config.json
docs/: .gitignore  README.md  SUMMARY.md  index.md  package-lock.json  package.json  tsconfig.json  typedoc.json  vercel.json
docs/.vitepress/: config.js
tools/: build-wasm.sh
(+208 files in other folders)
