[workspace]
members = [
    "crates/stat-core",
    "crates/stat-wasm",
    "crates/stat-wasm-stats",
    "crates/stat-wasm-distributions",
    "crates/stat-wasm-tests",
    "crates/stat-wasm-quantiles",
    "crates/stat-wasm-correlation",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

